[gd_scene load_steps=2 format=3 uid="uid://c8k4n5m2qaxy0"]

[ext_resource type="Script" path="res://scenes/sector_exploration/node_popup.gd" id="1"]

[node name="NodePopup" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -600.0
offset_right = 480.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 72
text = "Node Detected"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Type: Test
ID: node_0"
horizontal_alignment = 1

[node name="GravityLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_font_sizes/font_size = 44
text = "Gravity Assist:"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="SlowerButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(220, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Slower
(-0.2x)"

[node name="SameButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(220, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Same
(1.0x)"

[node name="FasterButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(220, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Faster
(+0.2x)"

[node name="ContinueButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Continue"
